--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.5.3",
+    "@mantine/form": "^7.5.3",
     "@mantine/hooks": "^7.5.3",
     "@primer/octicons-react": "^19.8.0",
     "react": "^18.2.0",
